# myrtille

./: CMakeLists.txt  Makefile  README.md  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.h  cornell_box.mtl  cornell_box.ply  cornell_bunny.mtl  cornell_bunny.ply  file_tools.cpp  file_tools.h  geometry.cpp  geometry.h  main.cpp  material.cpp  material.h  math_tools.cpp  math_tools.h  mesh.cpp  mesh.h  mesh.ply  renderer.cpp  renderer.h  rt.files  sampler.cpp  sampler.h  scene.cpp  scene.h  string_tools.cpp  string_tools.h  time_tools.cpp  time_tools.h
data/: bunny.ply  cornell_box.ply  cornell_box_s.mtl  mesh_2.ply  mesh_ascii.ply
